--- a/app/about.html
+++ b/app/about.html
@@ -38,10 +38,10 @@
                 </div>
 
                 <div class="menu__right-item">
-                    <a href="" class="menu__link menu__link--active">
+                    <a href="index.html" class="menu__link">
                         HOME
                     </a>
-                    <a href="about.html" class="menu__link">
+                    <a href="about.html" class="menu__link menu__link--active">
                         ABOUT US
                     </a>
                     <a href="products.html" class="menu__link">
@@ -84,192 +84,214 @@
 
     </header>
 
-
     <section>
-        <div class="container">
-            <div class="row home-about">
-                <div class="home-about__img-container">
-                    <img class="home-about__img" src="assets/images/city.png" alt="">
-                </div>
-                <div class="home-about__text">
-                    <img src="assets/images/dots.png" class="home-about__text__bg" alt="">
-                    <h2 class="title">
-                        ABOUT COMPANY
-                    </h2>
-                    <h2 class="title__sub">
-                        SLS Microfinance Bank is founded with focus on the financially unserved and underserved.
-                    </h2>
-                    <p class="home-about__paragraph">
-                        We are people oriented, with the aim of providing all with basic financial services in an innovative and easily accessible manner.
-                    </p>
-                    <p class="home-about__paragraph">
-                        We strive to be the leading and most innovative financial services provider to all, at world class standard.
-                    </p>
-
-                    <a href="#" class="link">
-                        FIND OUT MORE ABOUT US
-                        <span>
-                            <img class="btn__arrow" src="assets/images/Arrow.svg" alt="">
-                        </span>
-                    </a>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section>
-        <div class="row paper__container">
-            <div class="paper">
-                All Geographical Zones Covered
-                <span>6</span>
-            </div>
-            <div class="paper">
-                Business Fund
-                <span>65K</span>
-            </div>
-            <div class="paper">
-                Reliable Client
-                <span>20&plus;</span>
-            </div>
-        </div>
-    </section>
-
-
-    <section>
-
-        <div class="container container__gradient">
+        <div class="about__container">
             <div class="row">
-                <div class="container__moved">
-                    <h2 class="title">
-                        OUR SERVICES
-                    </h2>
-                    <h3 class="title__sub">
-                        Lets see what our client says
-                    </h3>
-                </div>
-
-
-                <div class="card__container">
-                    <div class="card__bg">
-                        <div></div>
-                    </div>
-                    <div class="card__inner-container">
-                        <div class="card">
-                            <img src="assets/images/browser.png" alt="" class="card__icon">
-                            <h3 class="card__title">Online Banking</h3>
-                            <p class="card__text">At SLS you have the opportuinity to send money ...</p>
-                            <a href="#" class="link card__link">
-                                VIEW MORE
-                                <span>
-                                    <img class="btn__arrow" src="assets/images/Arrow.svg" alt="">
-                                </span>
-                            </a>
-                        </div>
-                        <div class="card">
-                            <img src="assets/images/wallet.png" alt="" class="card__icon">
-                            <h3 class="card__title">Retail & Enterprise Loans</h3>
-                            <p class="card__text">Need a loan? Have no worries. At SLS microfinance Bank ...</p>
-                            <a href="#" class="link card__link">
-                                VIEW MORE
-                                <span>
-                                    <img class="btn__arrow" src="assets/images/Arrow.svg" alt="">
-                                </span>
-                            </a>
-                        </div>
-                        <div class="card">
-                            <img src="assets/images/save-money.png" alt="" class="card__icon">
-                            <h3 class="card__title">Account Services</h3>
-                            <p class="card__text">Our accounts are tailored to cover a wide ...</p>
-                            <a href="#" class="link card__link">
-                                VIEW MORE
-                                <span>
-                                    <img class="btn__arrow" src="assets/images/Arrow.svg" alt="">
-                                </span>
-                            </a>
-                        </div>
-                    </div>
-
-                </div>
+                <h2 class="about__title">
+                    REACH OUT TO US
+                </h2>
+                <p class="about__text">
+                    We look forward to hearing from you! <br> We guarantee feedback within 24 hours </p>
             </div>
         </div>
-
     </section>
 
-    <div class="container container__white">
-        <div class="row">
-            <h2 class="title">
-                TOP STORIES
-            </h2>
+    <section class="about__section">
+        <div class="container">
+            <div class="row">
 
-            <div class="stories__container">
-
-                <div class="stories">
-                    <div class="stories__img__container">
-                        <img src="assets/images/savings.png" alt="" class="stories__img">
+                <div class="about__item-container">
+                    <div class="about__item">
+                        <h2 class="title">
+                            OUR VISION
+                        </h2>
+                        <p class="txt">
+                            To be the leading and most innovative financial services provider to all at world class standard.
+                        </p>
                     </div>
-                    <h2 class="stories__title">
-                        The importance of your SLS savings
-                    </h2>
-                    <div class="stories__footer">
-                        <span class="stories__time-stamp">
-                                1 Year Ago
-                            </span>
-
-                        <a href="#" class="link card__link">
-                                VIEW MORE
-                                <span>
-                                    <img class="btn__arrow" src="assets/images/Arrow.svg" alt="">
-                                </span>
-                            </a>
+                    <div class="about__item__pic">
+                        <img src="assets/images/baller.jpg" class="about__item__img" alt="">
                     </div>
                 </div>
-
-                <div class="stories">
-                    <div class="stories__img__container">
-                        <img src="assets/images/innovation.png" alt="" class="stories__img">
+                <div class="about__item-container">
+                    <div class="about__item">
+                        <h2 class="title">
+                            OUR MISSION
+                        </h2>
+                        <p class="txt">
+                            To leverage on technology in impacting the lives and businesses of our clients by ensuring access to financial services in a most innovative way.
                     </div>
-                    <h2 class="stories__title">
-                        Innovation in the financial Sector
-                    </h2>
-                    <div class="stories__footer">
-                        <span class="stories__time-stamp">
-                                1 Year Ago
-                            </span>
-
-                        <a href="#" class="link card__link">
-                                VIEW MORE
-                                <span>
-                                    <img class="btn__arrow" src="assets/images/Arrow.svg" alt="">
-                                </span>
-                            </a>
+                    <div class="about__item__pic">
+                        <img src="assets/images/INN.png" class="about__item__img" alt="">
                     </div>
                 </div>
-
-                <div class="stories">
-                    <div class="stories__img__container">
-                        <img src="assets/images/savings.png" alt="" class="stories__img">
+                <div class="about__item-container">
+                    <div class="about__item">
+                        <h2 class="title">
+                            OUR VISION
+                        </h2>
+                        <p class="txt">
+                            Integrity | Innovation | Accessibility | Friendliness | Professionalism | Excellence | Speed and Accuracy
+                        </p>
                     </div>
-                    <h2 class="stories__title">
-                        The importance of your SLS savings
-                    </h2>
-                    <div class="stories__footer">
-                        <span class="stories__time-stamp">
-                                1 Year Ago
-                            </span>
-
-                        <a href="#" class="link card__link">
-                                VIEW MORE
-                                <span>
-                                    <img class="btn__arrow" src="assets/images/Arrow.svg" alt="">
-                                </span>
-                            </a>
+                    <div class="about__item__pic">
+                        <img src="assets/images/LEG.png" class="about__item__img" alt="">
                     </div>
                 </div>
 
             </div>
         </div>
+    </section>
 
-    </div>
+    <section>
+        <div class="container container__white">
+            <div class="row">
+                <div class="teams">
+                    <h2 class="title">
+                        MANAGEMENT TEAM
+                    </h2>
+                    <div class="team__container">
+                        <div class="team">
+                            <img src="assets/images/ADE.png" alt="" class="team__img">
+                            <div class="team__content">
+                                <h3 class="team__content__title">
+                                    Omololu Akinjide Adewalure
+                                </h3>
+                                <h4 class="team__content__title__sub">
+                                    Chief Operations Officer
+                                </h4>
+                                <p class="team__content__text">
+                                    Omololu Akinjide Adewalure is the Chief operations officer. He has had 9 <span class="team__content__text__dots">...</span>
+                                    <span class="team__content__text__more">
+                                        years working experience in banking operations. He started his ...
+                                    </span>
+                                </p>
+                                <a href="#" class="link">
+                                    VIEW PROFILE
+                                    <span>
+                                        <img class="btn__arrow" src="assets/images/Arrow.svg" alt="">
+                                    </span>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="team">
+                            <img src="assets/images/GRACE.png" alt="" class="team__img">
+                            <div class="team__content">
+                                <h3 class="team__content__title">
+                                    Anara Chinyere Grace
+                                </h3>
+                                <h4 class="team__content__title__sub">
+                                    Head, Operations
+                                </h4>
+                                <p class="team__content__text">
+                                    Grace Anara is the head Banking Operations. She is a customer <span class="team__content__text__dots">...</span>
+                                    <span class="team__content__text__more">
+                                        service expert, with 10 years banking operations experience ...
+                                    </span>
+                                </p>
+                                <a href="#" class="link">
+                                    VIEW PROFILE
+                                    <span>
+                                        <img class="btn__arrow" src="assets/images/Arrow.svg" alt="">
+                                    </span>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="board__section">
+        <div class="container">
+            <div class="row">
+                <h2 class="title">
+                    board of directors
+                </h2>
+                <div class="boards">
+
+                    <div class="board">
+                        <div class="board__container">
+                            <div class="board__img-container">
+                                <img src="assets/images/Ikenna.png" alt="" class="board__img">
+                            </div>
+                        </div>
+                        <div class="board__content team__content">
+                            <h3 class="team__content__title">
+                                Temitope AKINYEMI
+                            </h3>
+                            <h4 class="team__content__title__sub">
+                                Chairman <span>of</span> <span>the</span> Board
+                            </h4>
+                            <p class="team__content__text">
+                                Temitope AKINYEMI is an accomplished Financial and Investment Adviser, Transaction Adviser and Public Private Partnership ...
+                            </p>
+                            <a href="#" class="link">
+                                VIEW PROFILE
+                                <span>
+                                    <img class="btn__arrow" src="assets/images/Arrow.svg" alt="">
+                                </span>
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="board">
+                        <div class="board__container">
+                            <div class="board__img-container">
+                                <img src="assets/images/stan.png" alt="" class="board__img">
+                            </div>
+                        </div>
+                        <div class="board__content team__content">
+                            <h3 class="team__content__title">
+                                Stanley Ugochukwu Peters
+                            </h3>
+                            <h4 class="team__content__title__sub">
+                                Non Executive Director
+                            </h4>
+                            <p class="team__content__text">
+                                Stanley Peters is an accomplished Executive with experience in operations, electronic payments and mobile money solutions ...
+                            </p>
+                            <a href="#" class="link">
+                                VIEW PROFILE
+                                <span>
+                                    <img class="btn__arrow" src="assets/images/Arrow.svg" alt="">
+                                </span>
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="board">
+                        <div class="board__container">
+                            <div class="board__img-container">
+                                <img src="assets/images/peters.png" alt="" class="board__img">
+                            </div>
+                        </div>
+                        <div class="board__content team__content">
+                            <h3 class="team__content__title">
+                                Oluwaseun Peters
+                            </h3>
+                            <h4 class="team__content__title__sub">
+                                Non Executive Director
+                            </h4>
+                            <p class="team__content__text">
+                                Oluwaseun Peters is an associate member of The Institute of chartered accountants of Nigeria (ICAN) with ...
+                            </p>
+                            <a href="#" class="link">
+                                VIEW PROFILE
+                                <span>
+                                    <img class="btn__arrow" src="assets/images/Arrow.svg" alt="">
+                                </span>
+                            </a>
+                        </div>
+                    </div>
+
+                </div>
+
+            </div>
+        </div>
+    </section>
+
 
     <section class="testimonials__section">
 
@@ -336,6 +358,7 @@
 
     </section>
 
+
     <footer>
 
         <div class="footer">
@@ -345,6 +368,7 @@
                         SUBSCRIBE TO OUR NEWSLETTER
                     </div>
                     <div class="footer__input__container">
+
                         <img src="assets/images/env.png" class="footer__input__icon" alt="">
                         <input class="footer__input" type="email" required placeholder="Enter your email address">
                         <input type="submit" href="" value="SUBMIT" class="footer__input__submit">
