--- a/app/stories.html
+++ b/app/stories.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>
-        SLS
+        Accelerex
     </title>
 
 
@@ -53,30 +53,61 @@
                     <a href="contact.html" class="menu__link">
                         CONTACT US
                     </a>
+                    <div class="menu-icon">
+                        <div class="menu-icon__line"></div>
+                    </div>
                 </div>
+
             </div>
 
         </div>
 
-        <div class="header-content row">
-            <div>
-                <h2 class="header-content__title">
-                    Welcome to SLS
-                </h2>
-                <p class="header-content__txt">
-                    The Complete microfinance <br class="break"> Solution
-                </p>
-                <a href="#" class="btn">
-                    GET A LOAN NOW 
-                    <span>
-                        <img class="btn__arrow" src="assets/images/Arrow.svg" alt="">
-                    </span>
-                </a>
+        <div class="mobile-menu">
+            <div class="mobile-menu__links">
+                <a href="index.html" class="mobile-menu__link">HOME</a>
+                <a href="about.html" class="mobile-menu__link">ABOUT US</a>
+                <a href="products.html" class="mobile-menu__link">PRODUCTS</a>
+                <a href="stories.html" class="mobile-menu__link mobile-menu__link--active">STORIES</a>
+                <a href="contact.html" class="mobile-menu__link">CONTACT US</a>
+            </div>
+        </div>
+
+        <div class="header__slider__container">
+
+            <div class="">
+
+                <div class="header__slider__inner">
+
+
+
+                    <div class="header-content row">
+                        <div>
+                            <h2 class="header-content__title">
+                                Accelerex
+                            </h2>
+                            <p class="header-content__txt">
+                                The Complete microfinance <br class="break"> Solution
+                            </p>
+                            <a href="#" class="btn">
+                                    GET A LOAN NOW 
+                                    <span>
+                                        <img class="btn__arrow" src="assets/images/Arrow.svg" alt="">
+                                    </span>
+                                </a>
+                        </div>
+
+                        <div>
+                            <img class="header-content__img" src="assets/images/suad-kamardeen-LmpGoHg0JBU-unsplash.png" alt="">
+                        </div>
+                    </div>
+
+                </div>
+
+
+
             </div>
 
-            <div>
-                <img class="header-content__img" src="assets/images/suad-kamardeen-LmpGoHg0JBU-unsplash.png" alt="">
-            </div>
+
         </div>
 
         <div class="header__side-bg"></div>
@@ -91,7 +122,7 @@
                     TOP STORIES
                 </h2>
                 <p class="about__text">
-                    Access our blog to see all news feeds and updated information on SLS.
+                    Access our blog to see all news feeds and updated information on Accelerex.
                 </p>
             </div>
         </div>
@@ -111,7 +142,7 @@
                             <img src="assets/images/savings.png" alt="" class="stories__img">
                         </div>
                         <h2 class="stories__title">
-                            The importance of your SLS savings
+                            The importance of your Accelerex savings
                         </h2>
                         <div class="stories__footer">
                             <span class="stories__time-stamp">
@@ -153,7 +184,7 @@
                             <img src="assets/images/savings.png" alt="" class="stories__img">
                         </div>
                         <h2 class="stories__title">
-                            The importance of your SLS savings
+                            The importance of your Accelerex savings
                         </h2>
                         <div class="stories__footer">
                             <span class="stories__time-stamp">
@@ -195,10 +226,10 @@
                 <div class="footer__container">
                     <div class="footer__container__item">
                         <h3 class="footer__container__title">
-                            SLS MICROFINANCE BANK
+                            Accelerex MICROFINANCE BANK
                         </h3>
                         <p class="footer__container__text">
-                            SLS Microfinance Bank is founded with focus on the financially unserved and underserved. We are people oriented, with the aim of providing all with basic financial services in an innovative and easily accessible manner.
+                            Accelerex Microfinance Bank is founded with focus on the financially unserved and underserved. We are people oriented, with the aim of providing all with basic financial services in an innovative and easily accessible manner.
                         </p>
 
                         <div class="footer__social__icons">
@@ -243,7 +274,7 @@
                             <img src="assets/images/location.svg" alt="">
 
                             <span>
-                                contact@slsbank.com
+                                contact@Accelerexbank.com
                             </span>
                         </div>
                         <div class="footer__container__flex">
