--- a/app/about.html
+++ b/app/about.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>
-        SLS
+        Accelerex
     </title>
 
 
@@ -53,30 +53,60 @@
                     <a href="contact.html" class="menu__link">
                         CONTACT US
                     </a>
+                    <div class="menu-icon">
+                        <div class="menu-icon__line"></div>
+                    </div>
                 </div>
             </div>
 
         </div>
 
-        <div class="header-content row">
-            <div>
-                <h2 class="header-content__title">
-                    Welcome to SLS
-                </h2>
-                <p class="header-content__txt">
-                    The Complete microfinance <br class="break"> Solution
-                </p>
-                <a href="#" class="btn">
-                    GET A LOAN NOW 
-                    <span>
-                        <img class="btn__arrow" src="assets/images/Arrow.svg" alt="">
-                    </span>
-                </a>
+        <div class="mobile-menu">
+            <div class="mobile-menu__links">
+                <a href="index.html" class="mobile-menu__link">HOME</a>
+                <a href="about.html" class="mobile-menu__link  mobile-menu__link--active">ABOUT US</a>
+                <a href="products.html" class="mobile-menu__link">PRODUCTS</a>
+                <a href="stories.html" class="mobile-menu__link">STORIES</a>
+                <a href="contact.html" class="mobile-menu__link">CONTACT US</a>
+            </div>
+        </div>
+
+        <div class="header__slider__container">
+
+            <div class="">
+
+                <div class="header__slider__inner">
+
+
+
+                    <div class="header-content row">
+                        <div>
+                            <h2 class="header-content__title">
+                                Welcome to Accelerex
+                            </h2>
+                            <p class="header-content__txt">
+                                The Complete microfinance <br class="break"> Solution
+                            </p>
+                            <a href="#" class="btn">
+                                    GET A LOAN NOW 
+                                    <span>
+                                        <img class="btn__arrow" src="assets/images/Arrow.svg" alt="">
+                                    </span>
+                                </a>
+                        </div>
+
+                        <div>
+                            <img class="header-content__img" src="assets/images/suad-kamardeen-LmpGoHg0JBU-unsplash.png" alt="">
+                        </div>
+                    </div>
+
+                </div>
+
+
+
             </div>
 
-            <div>
-                <img class="header-content__img" src="assets/images/suad-kamardeen-LmpGoHg0JBU-unsplash.png" alt="">
-            </div>
+
         </div>
 
         <div class="header__side-bg"></div>
@@ -88,10 +118,11 @@
         <div class="about__container">
             <div class="row">
                 <h2 class="about__title">
-                    REACH OUT TO US
+                    ABOUT US
                 </h2>
                 <p class="about__text">
-                    We look forward to hearing from you! <br> We guarantee feedback within 24 hours </p>
+                    We strive to positively impact our clients by ensuring access to financial services through technological friendly and innovative ways.
+                </p>
             </div>
         </div>
     </section>
@@ -166,7 +197,7 @@
                                         years working experience in banking operations. He started his ...
                                     </span>
                                 </p>
-                                <a href="#" class="link">
+                                <a href="#" class="link modal__link">
                                     VIEW PROFILE
                                     <span>
                                         <img class="btn__arrow" src="assets/images/Arrow.svg" alt="">
@@ -189,7 +220,7 @@
                                         service expert, with 10 years banking operations experience ...
                                     </span>
                                 </p>
-                                <a href="#" class="link">
+                                <a href="#" class="link modal__link">
                                     VIEW PROFILE
                                     <span>
                                         <img class="btn__arrow" src="assets/images/Arrow.svg" alt="">
@@ -227,7 +258,7 @@
                             <p class="team__content__text">
                                 Temitope AKINYEMI is an accomplished Financial and Investment Adviser, Transaction Adviser and Public Private Partnership ...
                             </p>
-                            <a href="#" class="link">
+                            <a href="#" class="link modal__link">
                                 VIEW PROFILE
                                 <span>
                                     <img class="btn__arrow" src="assets/images/Arrow.svg" alt="">
@@ -252,7 +283,7 @@
                             <p class="team__content__text">
                                 Stanley Peters is an accomplished Executive with experience in operations, electronic payments and mobile money solutions ...
                             </p>
-                            <a href="#" class="link">
+                            <a href="#" class="link modal__link">
                                 VIEW PROFILE
                                 <span>
                                     <img class="btn__arrow" src="assets/images/Arrow.svg" alt="">
@@ -277,7 +308,7 @@
                             <p class="team__content__text">
                                 Oluwaseun Peters is an associate member of The Institute of chartered accountants of Nigeria (ICAN) with ...
                             </p>
-                            <a href="#" class="link">
+                            <a href="#" class="link modal__link">
                                 VIEW PROFILE
                                 <span>
                                     <img class="btn__arrow" src="assets/images/Arrow.svg" alt="">
@@ -313,7 +344,7 @@
 
                         <div class="testimonials swiper-slide">
                             <p class="testimonials__text">
-                                Applied for SLS stress free loan for an urgent need at close of business on Friday and received credit notification in bank account the same day before the weekend began. SLS truly cares. Judith, National Institute for Hospitality & Tourism.
+                                Applied for Accelerex stress free loan for an urgent need at close of business on Friday and received credit notification in bank account the same day before the weekend began. Accelerex truly cares. Judith, National Institute for Hospitality & Tourism.
                             </p>
 
                             <div class="testimonials__footer">
@@ -324,7 +355,7 @@
 
                         <div class="testimonials swiper-slide">
                             <p class="testimonials__text">
-                                I applied for SLS stress free loan for my child school fees and I got the money credited to my account within 5 hrs. Haruna Ibrahim, Abuja </p>
+                                I applied for Accelerex stress free loan for my child school fees and I got the money credited to my account within 5 hrs. Haruna Ibrahim, Abuja </p>
 
                             <div class="testimonials__footer">
                                 <img src="assets/images/avatar.png" class="testimonials__avatar" alt=""> Olawuyi Olusola
@@ -334,7 +365,7 @@
 
                         <div class="testimonials swiper-slide">
                             <p class="testimonials__text">
-                                I applied for SLS stress free loan for my child school fees and I got the money credited to my account within 5 hrs. Haruna Ibrahim, Abuja </p>
+                                I applied for Accelerex stress free loan for my child school fees and I got the money credited to my account within 5 hrs. Haruna Ibrahim, Abuja </p>
 
                             <div class="testimonials__footer">
                                 <img src="assets/images/avatar.png" class="testimonials__avatar" alt=""> Olawuyi Olusola
@@ -378,10 +409,10 @@
                 <div class="footer__container">
                     <div class="footer__container__item">
                         <h3 class="footer__container__title">
-                            SLS MICROFINANCE BANK
+                            Accelerex MICROFINANCE BANK
                         </h3>
                         <p class="footer__container__text">
-                            SLS Microfinance Bank is founded with focus on the financially unserved and underserved. We are people oriented, with the aim of providing all with basic financial services in an innovative and easily accessible manner.
+                            Accelerex Microfinance Bank is founded with focus on the financially unserved and underserved. We are people oriented, with the aim of providing all with basic financial services in an innovative and easily accessible manner.
                         </p>
 
                         <div class="footer__social__icons">
@@ -426,7 +457,7 @@
                             <img src="assets/images/location.svg" alt="">
 
                             <span>
-                                contact@slsbank.com
+                                contact@Accelerexbank.com
                             </span>
                         </div>
                         <div class="footer__container__flex">
@@ -448,6 +479,156 @@
 
     </footer>
 
+    <div class="modal">
+
+        <div class="modal__body">
+            <div class="modal__head">
+                <h2 class="modal__title">
+                    Omololu Akinjide Adewalure
+                    </h3>
+                </h2>
+                <div class="modal__close-btn">
+                    <img src="assets/images/ex.png" alt="">
+                </div>
+            </div>
+            <div class="modal__content__container">
+
+                <div class="modal__content">
+                    <h4 class="team__content__title__sub">
+                        Chief Operations Officer
+                    </h4>
+                    <p class="team__content__text">
+                        Omololu Akinjide Adewalure is the Chief operations officer. He has had 9 years working experience in banking operations. He started his banking experience with Skye bank as a customer experience management personnel and then moved to Guaranty Trust Bank
+                        in 2010. He has functioned at various times in different capacities in banking operations and back up Head of operations GTBank until he joined Accelerex Microfinance Bank. He is a member Nigerian Institute of management and Chartered
+                        Institute of Bankers of Nigeria.
+                    </p>
+                </div>
+
+
+            </div>
+
+        </div>
+
+        <div class="modal__body">
+            <div class="modal__head">
+                <h2 class="modal__title">
+                    Anara Chinyere Grace
+                </h2>
+                <div class="modal__close-btn">
+                    <img src="assets/images/ex.png" alt="">
+                </div>
+            </div>
+
+
+            <div class="modal__content__container">
+
+                <div class="modal__content">
+                    <h4 class="team__content__title__sub">
+                        Head, Operations
+                    </h4>
+                    <p class="team__content__text">
+                        Grace Anara is the head Banking Operations. She is a customer service expert, with 10 years banking operations experience. She has functioned in various capacities in Fortis microfinance Bank. She left Fortis Microfinance as Head Banking operations with
+                        16 branches under her supervision to join the Accelerex Microfinance bank Team.
+                    </p>
+                </div>
+
+
+            </div>
+
+
+        </div>
+
+        <div class="modal__body">
+            <div class="modal__head">
+                <h2 class="modal__title">
+                    TEMITOPE AKINYEMI
+                </h2>
+                <div class="modal__close-btn">
+                    <img src="assets/images/ex.png" alt="">
+                </div>
+            </div>
+
+
+            <div class="modal__content__container">
+
+                <div class="modal__content">
+
+                    <h4 class="team__content__title__sub">
+                        Chairman <span>of</span> <span>the</span> Board
+                    </h4>
+
+                    <p class="team__content__text">
+                        Temitope AKINYEMI is an accomplished Financial and Investment Adviser, Transaction Adviser and Public Private Partnership (PPP) advisor. He has over 19 years’ experience in finance. He had worked for the Power Team at the Bureau of Public Enterprise (BPE)
+                        under the Presidency in Nigeria. He also was one of three Portfolio Managers at Nigeria Sovereign Investment Authority (NSIA). While there, had direct responsibility for the Authority’s largest portfolio of PPP toll road projects
+                        including Second Niger Bridge and Lagos Ibadan Express road. He is a chartered financial analyst also an MBA Dual Concentration in Finance and Strategy, Yale School of Management, USA
+                    </p>
+                </div>
+
+
+            </div>
+
+
+        </div>
+
+        <div class="modal__body">
+            <div class="modal__head">
+                <h2 class="modal__title">
+                    STANLEY UGOCHUKWU PETERS
+                </h2>
+                <div class="modal__close-btn">
+                    <img src="assets/images/ex.png" alt="">
+                </div>
+            </div>
+
+
+            <div class="modal__content__container">
+
+                <div class="modal__content">
+                    <h4 class="team__content__title__sub">
+                        Non Executive Director
+                    </h4>
+                    <p class="team__content__text">
+                        Stanley Peters is an accomplished Executive with experience in operations, electronic payments and mobile money solutions both locally and internationally. He has business interest in electronic payments solutions and emerging technological needs of the
+                        financial industry. He currently serves as an Executive director Technolgy and innovation Global Accelerex Limited.
+                    </p>
+                </div>
+
+
+            </div>
+
+
+        </div>
+
+        <div class="modal__body">
+            <div class="modal__head">
+                <h2 class="modal__title">
+                    Oluwaseun Peters
+                </h2>
+                <div class="modal__close-btn">
+                    <img src="assets/images/ex.png" alt="">
+                </div>
+            </div>
+
+
+            <div class="modal__content__container">
+
+                <div class="modal__content">
+                    <h4 class="team__content__title__sub">
+                        Non Executive Director
+                    </h4>
+                    <p class="team__content__text">
+                        Oluwaseun Peters is an associate member of The Institute of chartered accountants of Nigeria (ICAN) with cognate experience as the Chief Financial Officer of Global Accelerex a payment service provider in Nigeria licenced by CBN. She was manager Financial
+                        Advisory Manager Deloitte and Touche Nigeria and West Africa, likewise she once served as Senior Associate Deal Advisory services KPMG Nigeria. She holds a Global Masters in Finance from IE Business School, Madrid Spain.
+                    </p>
+                </div>
+
+
+            </div>
+
+
+        </div>
+
+    </div>
     <!-- build:js assets/scripts/App.js -->
     <script src="temp/scripts/App.js"></script>
     <!-- endbuild -->
