--- a/app/contact.html
+++ b/app/contact.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>
-        SLS
+        Accelerex
     </title>
 
 
@@ -53,30 +53,60 @@
                     <a href="contact.html" class="menu__link menu__link--active">
                         CONTACT US
                     </a>
+                    <div class="menu-icon">
+                        <div class="menu-icon__line"></div>
+                    </div>
                 </div>
             </div>
 
         </div>
 
-        <div class="header-content row">
-            <div>
-                <h2 class="header-content__title">
-                    Welcome to SLS
-                </h2>
-                <p class="header-content__txt">
-                    The Complete microfinance <br class="break"> Solution
-                </p>
-                <a href="#" class="btn">
-                    GET A LOAN NOW 
-                    <span>
-                        <img class="btn__arrow" src="assets/images/Arrow.svg" alt="">
-                    </span>
-                </a>
+        <div class="mobile-menu">
+            <div class="mobile-menu__links">
+                <a href="index.html" class="mobile-menu__link">HOME</a>
+                <a href="about.html" class="mobile-menu__link">ABOUT US</a>
+                <a href="products.html" class="mobile-menu__link">PRODUCTS</a>
+                <a href="stories.html" class="mobile-menu__link">STORIES</a>
+                <a href="contact.html" class="mobile-menu__link mobile-menu__link--active">CONTACT US</a>
+            </div>
+        </div>
+
+        <div class="header__slider__container">
+
+            <div class="">
+
+                <div class="header__slider__inner">
+
+
+
+                    <div class="header-content row">
+                        <div>
+                            <h2 class="header-content__title">
+                                Welcome to Accelerex
+                            </h2>
+                            <p class="header-content__txt">
+                                The Complete microfinance <br class="break"> Solution
+                            </p>
+                            <a href="#" class="btn">
+                                    GET A LOAN NOW 
+                                    <span>
+                                        <img class="btn__arrow" src="assets/images/Arrow.svg" alt="">
+                                    </span>
+                                </a>
+                        </div>
+
+                        <div>
+                            <img class="header-content__img" src="assets/images/suad-kamardeen-LmpGoHg0JBU-unsplash.png" alt="">
+                        </div>
+                    </div>
+
+                </div>
+
+
+
             </div>
 
-            <div>
-                <img class="header-content__img" src="assets/images/suad-kamardeen-LmpGoHg0JBU-unsplash.png" alt="">
-            </div>
+
         </div>
 
         <div class="header__side-bg"></div>
@@ -88,13 +118,85 @@
         <div class="about__container">
             <div class="row">
                 <h2 class="about__title">
-                    ABOUT
+                    REACH OUT TO US
                 </h2>
                 <p class="about__text">
-                    We strive to positively impact our clients by ensuring access to financial services through technological friendly and innovative ways.
+                    We look forward to hearing from you! <br> We guarantee feedback within 24 hours
                 </p>
             </div>
         </div>
+    </section>
+
+    <section class="contact__section">
+
+        <div class="container">
+            <div class="row">
+                <h2 class="title">
+                    reach out
+                </h2>
+                <div class="contact">
+                    <form action="" class="contact-form">
+
+                        <div class="contact-form__inner-container">
+                            <input type="text" id="contact-form__name" required autocomplete="off" class="contact-form__input">
+                            <label for="contact-form__name" class="contact-form__label">
+                                Name
+                            </label>
+                        </div>
+                        <div class="contact-form__inner-container">
+                            <input type="text" id="contact-form__email" required autocomplete="off" class="contact-form__input">
+                            <label for="contact-form__email" class="contact-form__label">
+                                Email
+                            </label>
+                        </div>
+                        <div class="contact-form__inner-container">
+                            <textarea type="text" rows="6" id="contact-form__message" required autocomplete="off" class="contact-form__input"></textarea>
+                            <label for="contact-form__name" class="contact-form__label">
+                                Message
+                            </label>
+                        </div>
+
+                        <div class="contact-form__inner-container">
+                            <input type="submit" value="Submit" class="contact-form__submit">
+                        </div>
+
+                    </form>
+                    <div class="contact__map">
+                        <div class="contact__inner__map">
+                            <div class="mapouter">
+                                <div class="gmap_canvas">
+                                    <iframe style="width: 100%;height: 500px;" id="gmap_canvas" src="https://maps.google.com/maps?q=8%20Asaba%20Close%2C%20Off%20Emeka%20Anyaoku%20Street%2C%20Area%2011%20Garki%20Abuja&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0"
+                                        marginwidth="0"></iframe>
+                                    <a href="https://www.online-timer.net"></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="contact__items">
+                            <div class="contact__item">
+                                <img src="assets/images/location.svg" class="contact__item__img" alt="">
+                                <p class="contact__item__text">
+                                    Plot 1109, No 167 Ademola Adetokunbo Crescent, Wuse 2 Abuja
+                                </p>
+                            </div>
+                            <div class="contact__item">
+                                <img src="assets/images/phone.svg" class="contact__item__img" alt="">
+                                <p class="contact__item__text">
+                                    +234 90 2115 9180, <br> +234 81 6710 2409
+                                </p>
+                            </div>
+
+                            <div class="contact__item">
+                                <img src="assets/images/mail.svg" class="contact__item__img" alt="">
+                                <p class="contact__item__text">
+                                    contact@Accelerexbank.com
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </section>
 
 
@@ -119,10 +221,10 @@
                 <div class="footer__container">
                     <div class="footer__container__item">
                         <h3 class="footer__container__title">
-                            SLS MICROFINANCE BANK
+                            Accelerex MICROFINANCE BANK
                         </h3>
                         <p class="footer__container__text">
-                            SLS Microfinance Bank is founded with focus on the financially unserved and underserved. We are people oriented, with the aim of providing all with basic financial services in an innovative and easily accessible manner.
+                            Accelerex Microfinance Bank is founded with focus on the financially unserved and underserved. We are people oriented, with the aim of providing all with basic financial services in an innovative and easily accessible manner.
                         </p>
 
                         <div class="footer__social__icons">
@@ -167,7 +269,7 @@
                             <img src="assets/images/location.svg" alt="">
 
                             <span>
-                                contact@slsbank.com
+                                contact@Accelerexbank.com
                             </span>
                         </div>
                         <div class="footer__container__flex">
