--- a/app/about.html
+++ b/app/about.html
@@ -27,7 +27,7 @@
 
 <body>
 
-    <header class="header">
+    <header class="header header-about">
 
         <div class="menu">
 
@@ -82,10 +82,10 @@
                     <div class="header-content row">
                         <div>
                             <h2 class="header-content__title">
-                                Welcome to Accelerex
+                                About Us
                             </h2>
                             <p class="header-content__txt">
-                                The Complete microfinance <br class="break"> Solution
+                                We are a microfinance bank that puts our customers first
                             </p>
                             <a href="#" class="btn">
                                     GET A LOAN NOW 
@@ -96,7 +96,7 @@
                         </div>
 
                         <div>
-                            <img class="header-content__img" src="assets/images/suad-kamardeen-LmpGoHg0JBU-unsplash.png" alt="">
+                            <img class="header-content__img" src="assets/images/about.svg" alt="">
                         </div>
                     </div>
 
@@ -433,11 +433,11 @@
                         <h3 class="footer__container__title">
                             RELATED LINKS
                         </h3>
-                        <a href="" class="footer__container__link">Home</a> <br>
-                        <a href="" class="footer__container__link">About</a> <br>
-                        <a href="" class="footer__container__link">Products</a> <br>
-                        <a href="" class="footer__container__link">Stories</a> <br>
-                        <a href="" class="footer__container__link">Contact Us</a>
+                        <a href="index.html" class="footer__container__link">Home</a> <br>
+                        <a href="about.html" class="footer__container__link">About</a> <br>
+                        <a href="products.html" class="footer__container__link">Products</a> <br>
+                        <a href="stories.html" class="footer__container__link">Stories</a> <br>
+                        <a href="contact.html" class="footer__container__link">Contact Us</a>
                     </div>
 
                     <div class="footer__container__item">
