--- a/app/products.html
+++ b/app/products.html
@@ -27,7 +27,7 @@
 
 <body>
 
-    <header class="header">
+    <header class="header header-product">
 
         <div class="menu">
 
@@ -83,10 +83,10 @@
                     <div class="header-content row">
                         <div>
                             <h2 class="header-content__title">
-                                Accelerex
+                                Our Products
                             </h2>
                             <p class="header-content__txt">
-                                The Complete microfinance <br class="break"> Solution
+                                Our product vary to suit your needs
                             </p>
                             <a href="#" class="btn">
                                     GET A LOAN NOW 
@@ -97,7 +97,7 @@
                         </div>
 
                         <div>
-                            <img class="header-content__img" src="assets/images/suad-kamardeen-LmpGoHg0JBU-unsplash.png" alt="">
+                            <img class="header-content__img" src="assets/images/product.svg" alt="">
                         </div>
                     </div>
 
@@ -474,11 +474,11 @@
                         <h3 class="footer__container__title">
                             RELATED LINKS
                         </h3>
-                        <a href="" class="footer__container__link">Home</a> <br>
-                        <a href="" class="footer__container__link">About</a> <br>
-                        <a href="" class="footer__container__link">Products</a> <br>
-                        <a href="" class="footer__container__link">Stories</a> <br>
-                        <a href="" class="footer__container__link">Contact Us</a>
+                        <a href="index.html" class="footer__container__link">Home</a> <br>
+                        <a href="about.html" class="footer__container__link">About</a> <br>
+                        <a href="products.html" class="footer__container__link">Products</a> <br>
+                        <a href="stories.html" class="footer__container__link">Stories</a> <br>
+                        <a href="contact.html" class="footer__container__link">Contact Us</a>
                     </div>
 
                     <div class="footer__container__item">
