--- a/app/index.html
+++ b/app/index.html
@@ -16,8 +16,7 @@
 
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,300i,400,600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display:900i&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:700&display=swap" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css?family=Righteous&display=swap" rel="stylesheet">
     <!-- build:js assets/scripts/Vendor.js -->
     <script src="temp/scripts/Vendor.js"></script>
     <!-- endbuild -->
@@ -71,10 +70,10 @@
         </div>
 
         <div class="header__slider__container header-home">
-
             <div class="siema">
 
-                <div class="header__slider__inner first">
+                <!-- <div class="header__slider__inner first">
+                    <img src="assets/images/Ellipse.png" class="header__side-circle">
 
                     <div class="header-content row">
                         <div>
@@ -97,11 +96,10 @@
                         </div>
                     </div>
 
-                </div>
+                </div> -->
 
-                <div class="header__slider__inner second">
-
-
+                <!-- <div class="header__slider__inner second">
+                    <img src="assets/images/Ellipse.png" class="header__side-circle">
 
                     <div class="header-content row">
                         <div>
@@ -124,10 +122,11 @@
                         </div>
                     </div>
 
-                </div>
+                </div> -->
 
-                <div class="header__slider__inner third">
+                <!-- <div class="header__slider__inner third">
 
+                    <img src="assets/images/Ellipse.png" class="header__side-circle">
 
 
                     <div class="header-content row">
@@ -151,6 +150,84 @@
                         </div>
                     </div>
 
+                </div> -->
+
+                <div class="header__slider__inner fourth">
+                    <img src="assets/images/Ellipse.png" class="header__side-circle">
+
+                    <div class="header-content row">
+                        <div>
+                            <h2 class="header-content__title">
+                                Welcome to Accelerex
+                            </h2>
+                            <p class="header-content__txt">
+                                The Complete microfinance Solution
+                            </p>
+                            <a href="#" class="btn">
+                                    GET A LOAN NOW 
+                                    <span>
+                                        <img class="btn__arrow" src="assets/images/Arrow.svg" alt="">
+                                    </span>
+                                </a>
+                        </div>
+
+                        <div>
+                        </div>
+                    </div>
+
+                </div>
+
+                <div class="header__slider__inner fifth">
+
+
+                    <img src="assets/images/Ellipse.png" class="header__side-circle">
+
+                    <div class="header-content row">
+                        <div>
+                            <h2 class="header-content__title">
+                                Accelerex Microfinance Bank
+                            </h2>
+                            <p class="header-content__txt">
+                                "Accelerate your business, get a loan fast!"
+                            </p>
+                            <a href="#" class="btn">
+                                    GET A LOAN NOW 
+                                    <span>
+                                        <img class="btn__arrow" src="assets/images/Arrow.svg" alt="">
+                                    </span>
+                                </a>
+                        </div>
+
+                        <div>
+                        </div>
+                    </div>
+
+                </div>
+
+                <div class="header__slider__inner sixth">
+                    <img src="assets/images/Ellipse.png" class="header__side-circle">
+
+                    <div class="header-content row">
+                        <div>
+                            <h2 class="header-content__title">
+                                Accelerex Microfinance Bank
+                            </h2>
+                            <p class="header-content__txt">
+                                Extraordinary Customer Service
+                            </p>
+                            <a href="#" class="btn">
+                                    GET A LOAN NOW 
+                                    <span>
+                                        <img class="btn__arrow" src="assets/images/Arrow.svg" alt="">
+                                    </span>
+                                </a>
+                        </div>
+
+                        <div>
+                            <!-- <img class="header-content__img" src="assets/images/ser-till.svg" alt=""> -->
+                        </div>
+                    </div>
+
                 </div>
 
             </div>
@@ -163,12 +240,15 @@
 
 
         <div class="header__side-bg"></div>
-        <img src="assets/images/Ellipse.png" class="header__side-circle">
+
 
         <div class="header__dot-container">
             <div class="dot"></div>
             <div class="dot"></div>
-            <div class="dot"></div class="dot">
+            <div class="dot"></div>
+            <!-- <div class="dot"></div>
+            <div class="dot"></div>
+            <div class="dot"></div> -->
         </div>
 
     </header>
@@ -211,16 +291,28 @@
     <section>
         <div class="row paper__container">
             <div class="paper">
-                All Geographical Zones Covered
-                <span>6</span>
+                <img src="assets/images/globe.svg" alt="">
+                <div>
+                    All Geographical Zones Covered
+                    <span>6</span>
+                </div>
+
             </div>
             <div class="paper">
-                Business Fund
-                <span>65K</span>
+                <img src="assets/images/money.svg" alt="">
+                <div>
+                    Business Fund
+                    <span>65K</span>
+                </div>
+
             </div>
             <div class="paper">
-                Reliable Client
-                <span>20&plus;</span>
+                <img src="assets/images/customer-review.svg" alt="">
+                <div>
+                    Reliable Client
+                    <span>20&plus;</span>
+                </div>
+
             </div>
         </div>
     </section>
@@ -621,9 +713,3 @@
     <!-- endbuild -->
 
 </body>
-
-
-
-
-
-</html>
